--- a/Project/Base.lproj/Main.storyboard
+++ b/Project/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <segue destination="7Ep-3m-IaG" kind="show" id="wU0-ND-JfU"/>
+                                    <segue destination="FpQ-62-Edf" kind="show" id="ww2-9V-vEo"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J7U-Qa-d7m">
@@ -48,43 +48,57 @@
             <point key="canvasLocation" x="137.68115942028987" y="-607.33695652173913"/>
         </scene>
         <!--Collection View Controller-->
-        <scene sceneID="sX5-4y-5Sv">
+        <scene sceneID="TIq-4C-d31">
             <objects>
-                <viewController id="7Ep-3m-IaG" customClass="CollectionViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="iPK-E6-vJR">
+                <collectionViewController id="FpQ-62-Edf" customClass="CollectionViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="h7r-DT-xJn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="1hJ-K2-o1m">
-                                <rect key="frame" x="0.0" y="44" width="414" height="692"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gb6-pU-IjY">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="r40-58-jYC">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="J7f-1q-tjC">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
-                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="VcE-zp-jfG"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="LMJ-Gi-ZcM"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4IX-ji-nCP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="HF2-4F-Hbg">
+                            <size key="itemSize" width="110" height="110"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="k5q-n3-eiJ" customClass="CollectionViewCell" customModule="Project" customModuleProvider="target">
+                                <rect key="frame" x="10" y="10" width="110" height="110"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mft-0O-hkh">
+                                    <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MaT-TL-2SP">
+                                            <rect key="frame" x="8" y="8" width="94" height="94"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="MaT-TL-2SP" firstAttribute="leading" secondItem="Mft-0O-hkh" secondAttribute="leading" constant="8" id="65l-td-UEV"/>
+                                        <constraint firstItem="MaT-TL-2SP" firstAttribute="top" secondItem="Mft-0O-hkh" secondAttribute="top" constant="8" id="NdF-3K-IpM"/>
+                                        <constraint firstItem="MaT-TL-2SP" firstAttribute="centerY" secondItem="Mft-0O-hkh" secondAttribute="centerY" id="swM-bC-QBy"/>
+                                        <constraint firstItem="MaT-TL-2SP" firstAttribute="centerX" secondItem="Mft-0O-hkh" secondAttribute="centerX" id="w7x-2z-L59"/>
+                                    </constraints>
+                                </collectionViewCellContentView>
+                                <size key="customSize" width="110" height="110"/>
+                                <connections>
+                                    <outlet property="label" destination="MaT-TL-2SP" id="c3v-nX-VeL"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="FpQ-62-Edf" id="nvM-i5-HKm"/>
+                            <outlet property="delegate" destination="FpQ-62-Edf" id="Ikd-5z-sKo"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="7O4-h2-WI8"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uoD-cM-Kbs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="968.11594202898561" y="-610.59782608695662"/>
+            <point key="canvasLocation" x="966.66666666666674" y="-607.33695652173913"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gfj-w5-Dnn">
