--- a/Project/Base.lproj/Main.storyboard
+++ b/Project/Base.lproj/Main.storyboard
@@ -62,7 +62,7 @@
                             <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="k5q-n3-eiJ" customClass="CollectionViewCell" customModule="Project" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Сell" id="k5q-n3-eiJ" customClass="CollectionViewCell" customModule="Project" customModuleProvider="target">
                                 <rect key="frame" x="10" y="10" width="110" height="110"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mft-0O-hkh">
