--- a/Project/Base.lproj/Main.storyboard
+++ b/Project/Base.lproj/Main.storyboard
@@ -87,7 +87,8 @@
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="110" height="110"/>
                                 <connections>
-                                    <outlet property="label" destination="MaT-TL-2SP" id="c3v-nX-VeL"/>
+                                    <outlet property="labelKana" destination="MaT-TL-2SP" id="ucl-WJ-ona"/>
+                                    <segue destination="l8d-ht-EgW" kind="presentation" identifier="kanaSegue" id="44I-3X-8kr"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -238,20 +239,51 @@
             </objects>
             <point key="canvasLocation" x="1752" y="87"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail Kana-->
         <scene sceneID="v3z-yE-6rF">
             <objects>
-                <viewController id="l8d-ht-EgW" sceneMemberID="viewController">
+                <viewController id="l8d-ht-EgW" customClass="DetailKana" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qIK-i9-gj0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="716"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H3G-V1-QY9">
+                                <rect key="frame" x="87" y="238" width="240" height="240"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="あ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bUq-p2-AoA" userLabel="Label">
+                                        <rect key="frame" x="8" y="8" width="224" height="224"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="224" id="RHp-22-OT0"/>
+                                            <constraint firstAttribute="width" constant="224" id="xMv-UJ-T30"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="142"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="bUq-p2-AoA" secondAttribute="bottom" constant="8" id="1RG-06-cct"/>
+                                    <constraint firstItem="bUq-p2-AoA" firstAttribute="top" secondItem="H3G-V1-QY9" secondAttribute="top" constant="8" id="4aN-o5-Uno"/>
+                                    <constraint firstAttribute="trailing" secondItem="bUq-p2-AoA" secondAttribute="trailing" constant="8" id="MNX-SB-eL9"/>
+                                    <constraint firstItem="bUq-p2-AoA" firstAttribute="leading" secondItem="H3G-V1-QY9" secondAttribute="leading" constant="8" id="nIB-Fq-Gyn"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="H3G-V1-QY9" firstAttribute="centerY" secondItem="PPe-NL-NzD" secondAttribute="centerY" id="89y-dv-gFH"/>
+                            <constraint firstItem="H3G-V1-QY9" firstAttribute="centerX" secondItem="PPe-NL-NzD" secondAttribute="centerX" id="cfb-Lp-KFA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="PPe-NL-NzD"/>
                     </view>
+                    <connections>
+                        <outlet property="detailLabel" destination="bUq-p2-AoA" id="42y-NR-Ijx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eij-T6-fXG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2528" y="-654"/>
+            <point key="canvasLocation" x="1750.7246376811595" y="-607.33695652173913"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="C0C-Du-HXp">
