--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -50,10 +50,10 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="-607.33695652173913"/>
         </scene>
-        <!--Collection View Controller-->
+        <!--Kana Collection View Controller-->
         <scene sceneID="TIq-4C-d31">
             <objects>
-                <collectionViewController id="FpQ-62-Edf" customClass="CollectionViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="FpQ-62-Edf" customClass="KanaCollectionViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="h7r-DT-xJn">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -180,6 +180,9 @@
                                 <state key="normal" title="N 1">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EhD-Qf-jav" kind="show" id="KmM-9H-fQi"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fUE-zH-6XL">
                                 <rect key="frame" x="84" y="255" width="246" height="88"/>
@@ -189,6 +192,9 @@
                                 <state key="normal" title="N 2">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EhD-Qf-jav" kind="show" id="LSq-b8-rtz"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jrl-UI-Bz6">
                                 <rect key="frame" x="84" y="372" width="246" height="88"/>
@@ -198,6 +204,9 @@
                                 <state key="normal" title="N 3">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EhD-Qf-jav" kind="show" id="LVH-UP-rUN"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gzV-SS-PiB">
                                 <rect key="frame" x="84" y="484" width="246" height="88"/>
@@ -207,6 +216,9 @@
                                 <state key="normal" title="N 4">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EhD-Qf-jav" kind="show" id="1gN-Iy-TYf"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFc-od-7tV">
                                 <rect key="frame" x="84" y="596" width="246" height="88"/>
@@ -216,6 +228,9 @@
                                 <state key="normal" title="N 5">
                                     <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                 </state>
+                                <connections>
+                                    <segue destination="EhD-Qf-jav" kind="show" id="1rL-6b-m5B"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -225,22 +240,67 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RD2-mo-vl2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="968" y="87"/>
+            <point key="canvasLocation" x="966.66666666666674" y="86.413043478260875"/>
         </scene>
-        <!--Kanji List View Controller-->
+        <!--Kanji View Controller-->
         <scene sceneID="rT4-Ji-97v">
             <objects>
-                <viewController id="EhD-Qf-jav" customClass="KanjiListViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="EhD-Qf-jav" customClass="KanjiViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="71i-0U-Wvs">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="YWS-sF-Dky">
+                                <rect key="frame" x="87" y="44" width="240" height="692"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YRU-Ck-BoV">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kanjiCell" id="eq4-pN-oyk" customClass="KanjiCollectionViewCell" customModule="Project" customModuleProvider="target">
+                                        <rect key="frame" x="56" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="rEs-pt-lcF">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxx-zT-z6E">
+                                                    <rect key="frame" x="43" y="53.666666666666657" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cxx-zT-z6E" firstAttribute="centerX" secondItem="rEs-pt-lcF" secondAttribute="centerX" id="4L5-SP-o7H"/>
+                                                <constraint firstItem="cxx-zT-z6E" firstAttribute="centerY" secondItem="rEs-pt-lcF" secondAttribute="centerY" id="guf-Wl-6QE"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="kanjiListLabel" destination="cxx-zT-z6E" id="7J9-fP-qgj"/>
+                                            <segue destination="OgL-ut-9Iq" kind="show" id="wTI-II-52U"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YWS-sF-Dky" firstAttribute="leading" secondItem="E7A-jF-5Cx" secondAttribute="leading" constant="87" id="N27-ry-kBr"/>
+                            <constraint firstItem="E7A-jF-5Cx" firstAttribute="trailing" secondItem="YWS-sF-Dky" secondAttribute="trailing" constant="87" id="ZSr-TD-4h5"/>
+                            <constraint firstItem="E7A-jF-5Cx" firstAttribute="bottom" secondItem="YWS-sF-Dky" secondAttribute="bottom" id="pPG-qN-ZdT"/>
+                            <constraint firstItem="YWS-sF-Dky" firstAttribute="top" secondItem="E7A-jF-5Cx" secondAttribute="top" id="rv9-rq-YmT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="E7A-jF-5Cx"/>
                     </view>
+                    <navigationItem key="navigationItem" id="OIC-NT-3uH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dZE-04-xmX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1752" y="87"/>
+            <point key="canvasLocation" x="1750.7246376811595" y="86.413043478260875"/>
         </scene>
         <!--Detail Kana View Controller-->
         <scene sceneID="v3z-yE-6rF">
@@ -307,12 +367,15 @@
                                     <action selector="nextButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="Bg2-FB-mv4"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" fixedFrame="YES" image="speaker.3.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="hA4-gT-5OC">
-                                <rect key="frame" x="182" y="590.66666666666652" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGc-gK-8Qe">
+                                <rect key="frame" x="180" y="589" width="55" height="48"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                <color key="tintColor" cocoaTouchSystemColor="darkTextColor"/>
-                            </imageView>
+                                <state key="normal" image="speaker.3.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="spekerButtom:" destination="l8d-ht-EgW" eventType="touchUpInside" id="2br-xm-OYD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -344,6 +407,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="JfO-XD-e6R"/>
                     </view>
+                    <navigationItem key="navigationItem" id="xSc-ug-MFg"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Z8k-lD-4fE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -373,6 +437,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="KmM-9H-fQi"/>
         <segue reference="B2C-QD-kzL"/>
     </inferredMetricsTieBreakers>
     <resources>
